<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/studybuddy_background">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/back"
        android:src="@drawable/back_arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Great! Create your password"
        android:textSize="25sp"
        android:textStyle="italic"
        android:layout_marginTop="3dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="50dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/input_field_background"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/passwordConfirmInput"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="150dp"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:background="@drawable/input_field_background"
            android:padding="12dp"
            android:paddingEnd="50dp"
            android:layout_gravity="center"/>
    </RelativeLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:progress="88"
        android:max="100"
        style="@style/Widget.MaterialComponents.LinearProgressIndicator"
        app:trackColor="@color/gray"
        app:indicatorColor="@color/blue"/>

    <ImageView
        android:id="@+id/nextArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:layout_gravity="right"
        android:contentDescription="@string/next"
        android:src="@drawable/next_arrow" />
</LinearLayout>
